<resources>
    <string name="app_name">Reproductor en Kotlin</string>
    <string name="minuto">00:00</string>
    <string name="race">Race</string>
    <string name="edsheerancastleonthehill">Castle On The Hill</string>
    <string name="edsheerandive">Dive</string>
    <string name="edsheerangalwaygirl">Galway Girl</string>
    <string name="edsheerangivemelove">Give Me Love</string>
    <string name="edsheeranhowwouldyoufeel">How Would You Feel</string>
    <string name="edsheeranlegohouse">Lego House</string>
    <string name="edsheeranone">None</string>
    <string name="edsheeranperfect">Perfect</string>
    <string name="edsheerantheateam">The A Team</string>
    <string name="edsheeranthinkingoutloud">Thinking Out Loud</string>
    <string name="happieredsheeranlyric">Happier</string>
    <string name="photographedsheeran">Photograph</string>
    <string name="profile">Perfil</string>
    <string name="library">Biblioteca</string>
    <string name="search">Buscar</string>
    <string name="explore">Explorar</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="search_a_song">Buscar una canción</string>
    <string name="login">Iniciar Sesión</string>
</resources>