<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/homeFragment"
            android:checkable="true"
            android:icon="@drawable/ic_home_gray_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/exploreFragment"
            android:checkable="true"
            android:title="@string/explore"
            android:iconTint="@android:color/white"
            android:icon="@drawable/ic_explore_gray_24dp"
            tools:targetApi="o" />

        <item
            android:id="@+id/searchFragment"
            android:checkable="true"
            android:title="@string/search"
            android:icon="@drawable/ic_search_gray_24dp"/>

        <item
            android:id="@+id/libraryFragment"
            android:checkable="true"
            android:icon="@drawable/ic_library_music_gray_24dp"
            android:title="@string/library"/>

        <item
            android:id="@+id/profileFragment"
            android:checkable="true"
            android:title="@string/profile"
            android:icon="@drawable/ic_person_gray_24dp"/>
</menu>